[V4] FIX: align popup to the center of screen

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,6 +17,10 @@
 // Position
 // --------------------------------------------------
 
+ion-alert.alert-top{
+  align-items: center; 
+}
+
 .bottom-absolute {
   width: 100%;
   position: absolute;
